[gd_scene load_steps=2 format=3 uid="uid://c7ipf58q4301f"]

[ext_resource type="Script" path="res://HUD.gd" id="1_xf70f"]

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xf70f")

[node name="TimerCountdown" type="Timer" parent="."]
wait_time = 0.5

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelTime" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "TIME"

[node name="LabelPoints" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "TIME"

[node name="LabelStartCount" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 240
text = "3"

[connection signal="timeout" from="TimerCountdown" to="." method="_on_timer_timeout"]
